--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,19 @@
 name: noise_protocol
-version: 0.1.2
-homepage: https://github.com/bcattaneo/dart-noise-protocol
+version: 0.2.0
+homepage: https://github.com/bcattaneo/noise_protocol
 description:
   A Dart implementation of Noise protocol, which can be used for securing communications (E2EE,
   etc.).
 
 environment:
-  sdk: ">=2.5.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  collection: ^1.14.0
+  collection: ^1.15.0
   cryptography: ^2.0.5
-  meta: ^1.1.0
-  typed_data: ^1.1.0
-  convert: ^2.1.1
+  meta: ^1.3.0
+  typed_data: ^1.3.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.6.0
-
-dependency_overrides:
-  meta: 1.6.0
+  pedantic: ^1.11.0
+  test: ^1.16.0
